# LightDB

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: api.md  index.md  installation.md  models.md  quickstart.md
examples/: models_usage.py  simple_usage.py
lightdb/: __init__.py  core.py  exceptions.py  fields.py  models.py  pk.py  query.py
tests/: test_fields.py  test_models.py  test_query.py
