[project]
name = "re-lightdb"
description = "Lightweight JSON Database for Python"
readme = "README.md"
version = "3.0.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]
authors = [{name = "Fl1yd"}, {name = "univied"}]

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.basedpyright]
typeCheckingMode = "standard"
include = ["lightdb/"]
exclude = ["**/__pycache__", ".venv/"]
reportMissingTypeStubs = false
pythonVersion = "3.12"

[tool.ruff]
line-length = 150
target-version = "py312"
src = ["src"]

include = ["lightdb/**.py"]
exclude = [".venv/**", "__pycache__/**"]

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = [
    "ARG",
    "ANN",
    "D",
    "EM101",
    "EM102",
    "PT001",
    "PT023",
    "SIM108",
    "RET505",
    "PLR0913",
    "SIM103",
    "ISC003",
    "SIM114",
    "TC001",
    "TC002",
    "TC003",
    "TC006",
    "F401",
    "RUF",
    "S702",
    "PLR2004",
    "T201",
    "FBT001",
    "FBT002",
    "PLE1205",
    "PGH003",
    "TRY003",
    "RET503",
    "E701",
    "C408",
    "FBT003"
]
isort.no-lines-before = ["local-folder"]
flake8-tidy-imports.ban-relative-imports = "parents"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
